592067:TISSPTEN-22:In "VIew Cliq offer" page alignment issue of carosel arrow fix

--- a/ext/marketplace/marketplacestorefront/web/webroot/_ui/responsive/theme-blue/css/style.css
+++ b/ext/marketplace/marketplacestorefront/web/webroot/_ui/responsive/theme-blue/css/style.css
@@ -72949,4 +72949,10 @@ body.page-offersPage .homepage-banner .owl-theme .owl-controls .owl-nav .owl-pre
 body.page-offersPage .homepage-banner .owl-theme .owl-controls .owl-nav .owl-next:after{
 	height: 28px;
 	}
+body.page-offersPage .homepage-banner .home-rotatingImage.owl-theme .owl-controls{
+	position: static;
+}
+body.page-offersPage .homepage-banner .owl-theme .owl-controls{
+	position: absolute;
+}
 /* TISSPTEN-22 end */
